# synse-client-python

./: .gitignore  .jenkins  .readthedocs.yml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test-requirements.in  tox.ini
compose/: integration.yaml
compose/config/: devices.yaml
docs/: api_reference.rst  conf.py  index.md  index.rst  license.rst  tests.rst  usage.rst
docs/apidoc/: modules.rst  synse.rst
synse/: __init__.py  client.py  errors.py  models.py  utils.py
synse/responses/: __init__.py  capabilities.py  config.py  error.py  info.py  plugins.py  read.py  scan.py  status.py  transaction.py  version.py  write.py
tests/: conftest.py  test_client.py  test_client_http.py  test_client_websocket.py  test_errors.py  test_models.py
tests/integration/: test_http.py  test_websocket.py
tests/unit/: conftest.py  test_client_http.py  test_client_websocket.py  test_models.py  test_utils.py
