[tool.poetry]
name = "synse"
version = "1.0.1"
description = "The official Python client for interacting with the Synse Server API."
authors = ["Vapor IO <erick@vapor.io>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
aiodns = "^3.0.0"
aiohttp = "^3.8.3"
cchardet = "^2.1.7"
iso8601 = "^1.1.0"
multidict = "^6.0.4"

[tool.poetry.dev-dependencies]
pytest-aiohttp = "^1.0.4"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
